# paseca-ctf-2019

./: .gitignore  README.md  deployed-tasks.txt
tasks/angry/: README.md  flag.txt
tasks/baby_homo/: readme.md
tasks/bee_recognition/: readme.md
tasks/beehive/: README.md  flag.txt
tasks/blind_road/: README.md  flag.txt
tasks/bzzzhash/: README.md  checksum  flag.txt  script.py  solver.py
tasks/casino/: Readme.md
tasks/crypto-pwn/: flag.txt
tasks/dynamic/: README.md  flag.txt
tasks/el_accordion/: readme.md
tasks/expected_value_and_unexpected_winners/: Readme.md  run.sh  server.py  solve.py
tasks/fake_admin/: README.md  flag.txt
tasks/fast_dlog/: readme.md
tasks/flask_ssti/: README.md
tasks/franklin-reiter/: readme.md
tasks/genie/: README.md  flag.txt
tasks/genie/deploy/: .env  (+2 more)
tasks/hidden_malware/: README.md  flag.txt
tasks/honey_shop/: readme.md
tasks/honeyback/: README.md  flag.txt
tasks/hs_reverse/: README.md
tasks/no_out/: README.md
tasks/perm/: description.txt  readme.md
tasks/pixels_joy/: README.md
tasks/roca/: README.md
tasks/secrets_storage/: readme.md
tasks/subway/: README.md  Untitled.ipynb  dsu.py  gen_graph.py  requirements.txt
tasks/the_road_problem/: readme.md
tasks/top_breeder/: readme.md
tasks/tornado_casino/: readme.md
tasks/total-recall/: README.md
tasks/total-rekall/: README.md
tasks/totp-lcg/: Dockerfile  docker-compose.yml  readme.md
tasks/trunkspin/: readme.md
tasks/wasm-game/sources/: Cargo.toml  key_generator.py  match_generator.py  match_hack.py
tasks/wasm-game/sources/src/: main.rs
(+575 files in other folders)
