[package]
name = "wasm-game"
version = "0.1.0"
authors = ["3vilWind <evilwind@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.3.18"
block-modes = "0.3.3"
aes-soft = "0.3.3"
hex-literal = "0.2.0"
rand = "0.7.0"
hex = "0.3.2"
num = "0.2.0"
